# native-sizing

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  Makefile  Makefile copy.bak  Makefile.bak  Makefile.bak.mk  Makefile.mk  common.mk  mytestlog.txt  package.sh  processMake.sh  readme.md  tmp.mk  trafficMonitor  trafficMonitor_Sysin  unitTest.sh  windowsMake.sh
.Ini/: globalCompiling.ini  trafficMonitor.ini
.cspell/: custom-dictionary-workspace.txt
Apps/: CMakeLists.txt  Executions.mk  Makefile  SizingMain.cpp  SysinMain.cpp
Apps/Console/: Makefile_Process.mk
Apps/Executions/: Makefile
Apps/Sizing/: CMakeLists.txt  Makefile  SizingMain.cpp
Commons/Headers/: POSIXErrors.hpp
ExternalData/: 172.22.2.51_1521.v1.pcap
Headers/: LinuxSizingMainCaller.hpp  LinuxSysinMainCaller.hpp  MainCaller.hpp  SizingMainCaller.hpp  SizingMainCallerPrototype.hpp  SysinMainCaller.hpp  SysinMainCallerPrototype.hpp  WindowsSizingMainCaller.hpp  WindowsSysinMainCaller.hpp
Headers/SizingController/: LinuxCentosSizingMainCaller.hpp  LinuxSizingMainCaller.hpp  SizingMainCaller.hpp  WindowsSizingMainCaller.hpp
Headers/SizingControllers/: LinuxCentosSizingMainCaller.hpp  LinuxSizingMainCaller.hpp  SizingMainCaller.hpp  SizingMainCallerPrototype.hpp  SizingMainController.hpp  WindowsSizingMainCaller.hpp  WindowsSizingMainController.hpp
Models/: CMakeLists.txt
Models/Commons/: Makefile
Models/Commons/Headers/: HashTable.hpp  IOExporters.hpp  IOSpecification.hpp  InitializedFileParser.hpp  Log.hpp  NSTTime.hpp  POSIXErrors.hpp  PSTTime.hpp  StringImplement.hpp  StringImplment.hpp  Time.hpp  TimePrototype.hpp  UTCTime.hpp
Models/Commons/Sources/: CMakeLists.txt  HashTable.cpp  IOExporters.cpp  IOSpecification.cpp  InitializedFileParser.cpp  Log.cpp  NSTTime.cpp  PSTTime.cpp  StringImplement.cpp  StringImplment.cpp  Time.cpp  UTCTime.cpp
Models/Customs/Sources/: CMakeLists.txt
Models/FileInputs/Headers/: FileInputsPrototype.hpp
Models/FileInputs/Sources/: FileInputsPrototype.cpp
Models/FileParsers/: Makefile
Models/FileParsers/Headers/: FileParserPrototype.hpp  InitializedFileParser.hpp  InitializedJsonFileParser.hpp
Models/FileParsers/Sources/: CMakeLists.txt  FileParserPrototype.cpp  InitializedJsonFileParser.cpp
Models/PCAP/: Makefile
Models/PCAP/Headers/: LinuxPCAP.hpp  PCAPPrototype.hpp  WindowsPCAP.hpp
Models/PCAP/Sources/: CMakeLists.txt  LinuxPCAP.cpp  PCAPPrototype.cpp  WindowsPCAP.cpp
PCAP/Headers/: LinuxPCAP.hpp  PCAPPrototype.hpp
PCAP/Sources/: LinuxPCAP.cpp
Services/SizingServices/Headers/: Transformer.hpp
Services/SizingServices/Sources/: Transformer.cpp
Settings/: .version
Settings/.Cmake/: .customFileReference.cmake  .globalCmakeVariable.cmake  .systemSupport.cmake  .testingInstruction.cmake
Settings/.Criteria/.Json/: SizingMain.json
Settings/.Ini/: globalCompiling.ini
Settings/.Json/: SizingMain.json  SysinMain.json  globalDependencies.json
Shells/: compiledStringMessage.sh  iniParser.sh  installVendor.sh  makeVersion.sh
Sources/: CMakeLists.txt  LinuxSizingMainCaller.cpp  LinuxSysinMainCaller.cpp  MainCaller.cpp  SizingMainCaller.cpp  SizingMainCallerPrototype.cpp  SysinMainCaller.cpp  SysinMainCallerPrototype.cpp  WindowsSizingMainCaller.cpp  WindowsSysinMainCaller.cpp
Sources/SizingController/: CMakeLists.txt  LinuxCentosSizingMainCaller.cpp  LinuxSizingMainCaller.cpp  Makefile  SizingMainCaller.cpp  WindowsSizingMainCaller.cpp
Sources/SizingControllers/: CMakeLists.txt  LinuxCentosSizingMainCaller.cpp  LinuxCentosSizingMainController.cpp  LinuxSizingMainCaller.cpp  LinuxSizingMainController.cpp  SizingMainCaller.cpp  SizingMainCallerPrototype.cpp  SizingMainController.cpp  WindowsSizingMainCaller.cpp  WindowsSizingMainController.cpp
Tests/Models/Commons/Headers/: Test_IOExporters.hpp  Test_InitializedFileParser.hpp  Test_StringImplement.hpp
Tests/Models/Commons/Sources/: CMakeLists.txt  Test_HashTable.cpp  Test_IOExporters.cpp  Test_InitializedFileParser.cpp  Test_StringImplement.cpp
Tests/Models/FileParsers/Headers/: Test_InitializedJsonFileParser.hpp
Tests/Models/FileParsers/Sources/: CMakeLists.txt  Test_InitializedFileParser.cpp  Test_InitializedJsonFileParser.cpp
Tests/Shells/: Test_iniParser.sh  Test_installVendor.sh  Test_makeVersion.sh
